--- a/make_df.ipynb
+++ b/make_df.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -438,13 +438,399 @@
        "[2797 rows x 19 columns]"
       ]
      },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "      <th>id</th>\n",
+       "      <th>key</th>\n",
+       "      <th>text</th>\n",
+       "      <th>text_len</th>\n",
+       "      <th>context_name</th>\n",
+       "      <th>context_description</th>\n",
+       "      <th>context_annotations</th>\n",
+       "      <th>impression_count</th>\n",
+       "      <th>like_count</th>\n",
+       "      <th>retweet_count</th>\n",
+       "      <th>reply_count</th>\n",
+       "      <th>quote_count</th>\n",
+       "      <th>has_link</th>\n",
+       "      <th>has_emoji</th>\n",
+       "      <th>lang</th>\n",
+       "      <th>created_at</th>\n",
+       "      <th>edit_history_tweet_ids</th>\n",
+       "      <th>referenced_tweets</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1645735418938149888</td>\n",
+       "      <td>aleijada</td>\n",
+       "      <td>iala  essas piranha puta vadia safada vagabund...</td>\n",
+       "      <td>280</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>22</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>pt</td>\n",
+       "      <td>2023-04-11T10:27:54.000Z</td>\n",
+       "      <td>['1645735418938155010']</td>\n",
+       "      <td>[{'type': 'quoted', 'id': '1645517900722176009'}]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1645735092667529984</td>\n",
+       "      <td>aleijada</td>\n",
+       "      <td>se eu presenciar isso  vou presa pq ela ia fi...</td>\n",
+       "      <td>104</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>pt</td>\n",
+       "      <td>2023-04-11T10:26:37.000Z</td>\n",
+       "      <td>['1645735092667531266']</td>\n",
+       "      <td>[{'type': 'replied_to', 'id': '164560528129903...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1645724510304320000</td>\n",
+       "      <td>aleijada</td>\n",
+       "      <td>se so piora  vai ficar logo e aleijada</td>\n",
+       "      <td>53</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>pt</td>\n",
+       "      <td>2023-04-11T09:44:33.000Z</td>\n",
+       "      <td>['1645724510304325632']</td>\n",
+       "      <td>[{'type': 'replied_to', 'id': '164571619666100...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1645655628650629888</td>\n",
+       "      <td>aleijada</td>\n",
+       "      <td>guria eu tambem tenho certeza que sou toda er...</td>\n",
+       "      <td>99</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>pt</td>\n",
+       "      <td>2023-04-11T05:10:51.000Z</td>\n",
+       "      <td>['1645655628650631169']</td>\n",
+       "      <td>[{'type': 'replied_to', 'id': '164564212352011...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1645615543670510080</td>\n",
+       "      <td>aleijada</td>\n",
+       "      <td>limpe vc n e aleijada</td>\n",
+       "      <td>38</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>pt</td>\n",
+       "      <td>2023-04-11T02:31:34.000Z</td>\n",
+       "      <td>['1645615543670517760']</td>\n",
+       "      <td>[{'type': 'replied_to', 'id': '164561498806783...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2789</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1647537299167620096</td>\n",
+       "      <td>viado</td>\n",
+       "      <td>viu viado</td>\n",
+       "      <td>49</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>pt</td>\n",
+       "      <td>2023-04-16T09:47:56.000Z</td>\n",
+       "      <td>['1647537299167625218']</td>\n",
+       "      <td>[{'type': 'replied_to', 'id': '164669465402327...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2790</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1647537082045189888</td>\n",
+       "      <td>viado</td>\n",
+       "      <td>bom q seja preso seu viado</td>\n",
+       "      <td>38</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>pt</td>\n",
+       "      <td>2023-04-16T09:47:04.000Z</td>\n",
+       "      <td>['1647537082045198336']</td>\n",
+       "      <td>[{'type': 'replied_to', 'id': '164739044381712...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2792</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1647536575209769984</td>\n",
+       "      <td>viado</td>\n",
+       "      <td>oh o viado</td>\n",
+       "      <td>19</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>29</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>pt</td>\n",
+       "      <td>2023-04-16T09:45:03.000Z</td>\n",
+       "      <td>['1647536575209779200']</td>\n",
+       "      <td>[{'type': 'replied_to', 'id': '164739527487091...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2795</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1647534410210629888</td>\n",
+       "      <td>viado</td>\n",
+       "      <td>que esforco pra nao dizer que e viado</td>\n",
+       "      <td>54</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>pt</td>\n",
+       "      <td>2023-04-16T09:36:27.000Z</td>\n",
+       "      <td>['1647534410210631682']</td>\n",
+       "      <td>[{'type': 'replied_to', 'id': '164724939306458...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2796</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1647534169969280000</td>\n",
+       "      <td>viado</td>\n",
+       "      <td>porra viado mandei a foto la zoando</td>\n",
+       "      <td>64</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>18</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>pt</td>\n",
+       "      <td>2023-04-16T09:35:30.000Z</td>\n",
+       "      <td>['1647534169969287168']</td>\n",
+       "      <td>[{'type': 'replied_to', 'id': '164743019544642...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1317 rows × 19 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      label                   id       key  \\\n",
+       "0       1.0  1645735418938149888  aleijada   \n",
+       "1       1.0  1645735092667529984  aleijada   \n",
+       "2       0.0  1645724510304320000  aleijada   \n",
+       "3       0.0  1645655628650629888  aleijada   \n",
+       "4       0.0  1645615543670510080  aleijada   \n",
+       "...     ...                  ...       ...   \n",
+       "2789    0.0  1647537299167620096     viado   \n",
+       "2790    1.0  1647537082045189888     viado   \n",
+       "2792    0.0  1647536575209769984     viado   \n",
+       "2795    0.0  1647534410210629888     viado   \n",
+       "2796    0.0  1647534169969280000     viado   \n",
+       "\n",
+       "                                                   text  text_len  \\\n",
+       "0     iala  essas piranha puta vadia safada vagabund...       280   \n",
+       "1      se eu presenciar isso  vou presa pq ela ia fi...       104   \n",
+       "2                se so piora  vai ficar logo e aleijada        53   \n",
+       "3      guria eu tambem tenho certeza que sou toda er...        99   \n",
+       "4                                 limpe vc n e aleijada        38   \n",
+       "...                                                 ...       ...   \n",
+       "2789                                          viu viado        49   \n",
+       "2790                         bom q seja preso seu viado        38   \n",
+       "2792                                         oh o viado        19   \n",
+       "2795              que esforco pra nao dizer que e viado        54   \n",
+       "2796                porra viado mandei a foto la zoando        64   \n",
+       "\n",
+       "     context_name context_description context_annotations  impression_count  \\\n",
+       "0             NaN                 NaN                 NaN                22   \n",
+       "1             NaN                 NaN                 NaN                12   \n",
+       "2             NaN                 NaN                 NaN                 7   \n",
+       "3             NaN                 NaN                 NaN                24   \n",
+       "4             NaN                 NaN                 NaN                24   \n",
+       "...           ...                 ...                 ...               ...   \n",
+       "2789          NaN                 NaN                 NaN                31   \n",
+       "2790          NaN                 NaN                 NaN                10   \n",
+       "2792          NaN                 NaN                 NaN                29   \n",
+       "2795          NaN                 NaN                 NaN                10   \n",
+       "2796          NaN                 NaN                 NaN                18   \n",
+       "\n",
+       "      like_count  retweet_count  reply_count  quote_count  has_link  \\\n",
+       "0              0              0            0            0     False   \n",
+       "1              0              0            0            0     False   \n",
+       "2              0              0            0            0     False   \n",
+       "3              0              0            1            0     False   \n",
+       "4              0              0            1            0     False   \n",
+       "...          ...            ...          ...          ...       ...   \n",
+       "2789           0              0            0            0     False   \n",
+       "2790           0              0            1            0     False   \n",
+       "2792           0              0            0            0     False   \n",
+       "2795           1              0            0            0     False   \n",
+       "2796           1              0            0            0     False   \n",
+       "\n",
+       "      has_emoji lang                created_at   edit_history_tweet_ids  \\\n",
+       "0          True   pt  2023-04-11T10:27:54.000Z  ['1645735418938155010']   \n",
+       "1         False   pt  2023-04-11T10:26:37.000Z  ['1645735092667531266']   \n",
+       "2         False   pt  2023-04-11T09:44:33.000Z  ['1645724510304325632']   \n",
+       "3         False   pt  2023-04-11T05:10:51.000Z  ['1645655628650631169']   \n",
+       "4         False   pt  2023-04-11T02:31:34.000Z  ['1645615543670517760']   \n",
+       "...         ...  ...                       ...                      ...   \n",
+       "2789      False   pt  2023-04-16T09:47:56.000Z  ['1647537299167625218']   \n",
+       "2790      False   pt  2023-04-16T09:47:04.000Z  ['1647537082045198336']   \n",
+       "2792      False   pt  2023-04-16T09:45:03.000Z  ['1647536575209779200']   \n",
+       "2795      False   pt  2023-04-16T09:36:27.000Z  ['1647534410210631682']   \n",
+       "2796      False   pt  2023-04-16T09:35:30.000Z  ['1647534169969287168']   \n",
+       "\n",
+       "                                      referenced_tweets  \n",
+       "0     [{'type': 'quoted', 'id': '1645517900722176009'}]  \n",
+       "1     [{'type': 'replied_to', 'id': '164560528129903...  \n",
+       "2     [{'type': 'replied_to', 'id': '164571619666100...  \n",
+       "3     [{'type': 'replied_to', 'id': '164564212352011...  \n",
+       "4     [{'type': 'replied_to', 'id': '164561498806783...  \n",
+       "...                                                 ...  \n",
+       "2789  [{'type': 'replied_to', 'id': '164669465402327...  \n",
+       "2790  [{'type': 'replied_to', 'id': '164739044381712...  \n",
+       "2792  [{'type': 'replied_to', 'id': '164739527487091...  \n",
+       "2795  [{'type': 'replied_to', 'id': '164724939306458...  \n",
+       "2796  [{'type': 'replied_to', 'id': '164743019544642...  \n",
+       "\n",
+       "[1317 rows x 19 columns]"
+      ]
+     },
      "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "df_treino"
    ]
   },
   {
@@ -615,21 +1001,6 @@
    "metadata": {},
    "source": [
     "### PCA"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = scale(df.label)\n",
-    "y = df.text_len\n",
-    "\n",
-    "pca = decomposition.PCA()\n",
-    "X = pca.fit_transform(X)\n",
-    "\n",
-    "pca.get_covariance()"
    ]
   }
  ],
