--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -38,7 +38,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\silva\\OneDrive\\Área de Trabalho\\github\\classification-ti26s/\n"
+      "c:\\Users\\Dell\\Desktop\\git\\classification-ti26s/\n"
      ]
     }
    ],
@@ -850,6 +850,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2797 entries, 0 to 2796\n",
+      "Data columns (total 19 columns):\n",
+      " #   Column                  Non-Null Count  Dtype  \n",
+      "---  ------                  --------------  -----  \n",
+      " 0   label                   1317 non-null   float64\n",
+      " 1   id                      2797 non-null   int64  \n",
+      " 2   key                     2797 non-null   object \n",
+      " 3   text                    2797 non-null   object \n",
+      " 4   text_len                2797 non-null   int64  \n",
+      " 5   context_name            818 non-null    object \n",
+      " 6   context_description     743 non-null    object \n",
+      " 7   context_annotations     10 non-null     object \n",
+      " 8   impression_count        2797 non-null   int64  \n",
+      " 9   like_count              2797 non-null   int64  \n",
+      " 10  retweet_count           2797 non-null   int64  \n",
+      " 11  reply_count             2797 non-null   int64  \n",
+      " 12  quote_count             2797 non-null   int64  \n",
+      " 13  has_link                2797 non-null   bool   \n",
+      " 14  has_emoji               2797 non-null   bool   \n",
+      " 15  lang                    2797 non-null   object \n",
+      " 16  created_at              2797 non-null   object \n",
+      " 17  edit_history_tweet_ids  2797 non-null   object \n",
+      " 18  referenced_tweets       2755 non-null   object \n",
+      "dtypes: bool(2), float64(1), int64(7), object(9)\n",
+      "memory usage: 377.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_all.info()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -882,11 +924,171 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "      <th>id</th>\n",
+       "      <th>text_len</th>\n",
+       "      <th>impression_count</th>\n",
+       "      <th>like_count</th>\n",
+       "      <th>retweet_count</th>\n",
+       "      <th>reply_count</th>\n",
+       "      <th>quote_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1317.000000</td>\n",
+       "      <td>2.797000e+03</td>\n",
+       "      <td>2797.000000</td>\n",
+       "      <td>2797.000000</td>\n",
+       "      <td>2797.000000</td>\n",
+       "      <td>2797.000000</td>\n",
+       "      <td>2797.000000</td>\n",
+       "      <td>2797.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>0.293090</td>\n",
+       "      <td>1.646232e+18</td>\n",
+       "      <td>112.881659</td>\n",
+       "      <td>117.629961</td>\n",
+       "      <td>1.680729</td>\n",
+       "      <td>4.110118</td>\n",
+       "      <td>0.402574</td>\n",
+       "      <td>0.021809</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.455352</td>\n",
+       "      <td>1.162894e+15</td>\n",
+       "      <td>79.925143</td>\n",
+       "      <td>742.578680</td>\n",
+       "      <td>10.723970</td>\n",
+       "      <td>58.173769</td>\n",
+       "      <td>0.885566</td>\n",
+       "      <td>0.220279</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.642143e+18</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.645747e+18</td>\n",
+       "      <td>51.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.646375e+18</td>\n",
+       "      <td>84.000000</td>\n",
+       "      <td>22.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.647371e+18</td>\n",
+       "      <td>158.000000</td>\n",
+       "      <td>61.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.647572e+18</td>\n",
+       "      <td>369.000000</td>\n",
+       "      <td>27323.000000</td>\n",
+       "      <td>237.000000</td>\n",
+       "      <td>1479.000000</td>\n",
+       "      <td>24.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             label            id     text_len  impression_count   like_count  \\\n",
+       "count  1317.000000  2.797000e+03  2797.000000       2797.000000  2797.000000   \n",
+       "mean      0.293090  1.646232e+18   112.881659        117.629961     1.680729   \n",
+       "std       0.455352  1.162894e+15    79.925143        742.578680    10.723970   \n",
+       "min       0.000000  1.642143e+18     5.000000          0.000000     0.000000   \n",
+       "25%       0.000000  1.645747e+18    51.000000          8.000000     0.000000   \n",
+       "50%       0.000000  1.646375e+18    84.000000         22.000000     0.000000   \n",
+       "75%       1.000000  1.647371e+18   158.000000         61.000000     1.000000   \n",
+       "max       1.000000  1.647572e+18   369.000000      27323.000000   237.000000   \n",
+       "\n",
+       "       retweet_count  reply_count  quote_count  \n",
+       "count    2797.000000  2797.000000  2797.000000  \n",
+       "mean        4.110118     0.402574     0.021809  \n",
+       "std        58.173769     0.885566     0.220279  \n",
+       "min         0.000000     0.000000     0.000000  \n",
+       "25%         0.000000     0.000000     0.000000  \n",
+       "50%         0.000000     0.000000     0.000000  \n",
+       "75%         0.000000     1.000000     0.000000  \n",
+       "max      1479.000000    24.000000     6.000000  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_all.describe()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![describe](describe-full.png)\n"
+    "![describe](describe-full3.png)\n"
    ]
   },
   {
@@ -898,11 +1100,213 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 1317 entries, 0 to 2796\n",
+      "Data columns (total 19 columns):\n",
+      " #   Column                  Non-Null Count  Dtype  \n",
+      "---  ------                  --------------  -----  \n",
+      " 0   label                   1317 non-null   float64\n",
+      " 1   id                      1317 non-null   int64  \n",
+      " 2   key                     1317 non-null   object \n",
+      " 3   text                    1317 non-null   object \n",
+      " 4   text_len                1317 non-null   int64  \n",
+      " 5   context_name            332 non-null    object \n",
+      " 6   context_description     301 non-null    object \n",
+      " 7   context_annotations     5 non-null      object \n",
+      " 8   impression_count        1317 non-null   int64  \n",
+      " 9   like_count              1317 non-null   int64  \n",
+      " 10  retweet_count           1317 non-null   int64  \n",
+      " 11  reply_count             1317 non-null   int64  \n",
+      " 12  quote_count             1317 non-null   int64  \n",
+      " 13  has_link                1317 non-null   bool   \n",
+      " 14  has_emoji               1317 non-null   bool   \n",
+      " 15  lang                    1317 non-null   object \n",
+      " 16  created_at              1317 non-null   object \n",
+      " 17  edit_history_tweet_ids  1317 non-null   object \n",
+      " 18  referenced_tweets       1304 non-null   object \n",
+      "dtypes: bool(2), float64(1), int64(7), object(9)\n",
+      "memory usage: 187.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_treino.info()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "![describe](null-treino.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "      <th>id</th>\n",
+       "      <th>text_len</th>\n",
+       "      <th>impression_count</th>\n",
+       "      <th>like_count</th>\n",
+       "      <th>retweet_count</th>\n",
+       "      <th>reply_count</th>\n",
+       "      <th>quote_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1317.000000</td>\n",
+       "      <td>1.317000e+03</td>\n",
+       "      <td>1317.000000</td>\n",
+       "      <td>1317.000000</td>\n",
+       "      <td>1317.000000</td>\n",
+       "      <td>1317.000000</td>\n",
+       "      <td>1317.000000</td>\n",
+       "      <td>1317.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>0.293090</td>\n",
+       "      <td>1.646241e+18</td>\n",
+       "      <td>88.635535</td>\n",
+       "      <td>127.891420</td>\n",
+       "      <td>1.670463</td>\n",
+       "      <td>1.084282</td>\n",
+       "      <td>0.387244</td>\n",
+       "      <td>0.016705</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.455352</td>\n",
+       "      <td>1.072663e+15</td>\n",
+       "      <td>65.854767</td>\n",
+       "      <td>864.812804</td>\n",
+       "      <td>11.245769</td>\n",
+       "      <td>26.687537</td>\n",
+       "      <td>0.985652</td>\n",
+       "      <td>0.159864</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.642210e+18</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.645743e+18</td>\n",
+       "      <td>43.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.646363e+18</td>\n",
+       "      <td>66.000000</td>\n",
+       "      <td>23.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.647279e+18</td>\n",
+       "      <td>109.000000</td>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.647571e+18</td>\n",
+       "      <td>322.000000</td>\n",
+       "      <td>27323.000000</td>\n",
+       "      <td>237.000000</td>\n",
+       "      <td>812.000000</td>\n",
+       "      <td>24.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             label            id     text_len  impression_count   like_count  \\\n",
+       "count  1317.000000  1.317000e+03  1317.000000       1317.000000  1317.000000   \n",
+       "mean      0.293090  1.646241e+18    88.635535        127.891420     1.670463   \n",
+       "std       0.455352  1.072663e+15    65.854767        864.812804    11.245769   \n",
+       "min       0.000000  1.642210e+18     5.000000          0.000000     0.000000   \n",
+       "25%       0.000000  1.645743e+18    43.000000          8.000000     0.000000   \n",
+       "50%       0.000000  1.646363e+18    66.000000         23.000000     0.000000   \n",
+       "75%       1.000000  1.647279e+18   109.000000         60.000000     1.000000   \n",
+       "max       1.000000  1.647571e+18   322.000000      27323.000000   237.000000   \n",
+       "\n",
+       "       retweet_count  reply_count  quote_count  \n",
+       "count    1317.000000  1317.000000  1317.000000  \n",
+       "mean        1.084282     0.387244     0.016705  \n",
+       "std        26.687537     0.985652     0.159864  \n",
+       "min         0.000000     0.000000     0.000000  \n",
+       "25%         0.000000     0.000000     0.000000  \n",
+       "50%         0.000000     0.000000     0.000000  \n",
+       "75%         0.000000     1.000000     0.000000  \n",
+       "max       812.000000    24.000000     4.000000  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_treino.describe()"
    ]
   },
   {
@@ -1031,7 +1435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.1"
   },
   "orig_nbformat": 4
  },
