--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -1038,18 +1038,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "aleijado: 64.52% (62.0)\n",
-      "aleijada: 34.48% (58.0)\n",
-      "bosta: 16.33% (49.0)\n",
-      "bixa: 15.56% (45.0)\n",
-      "enforcado: 48.84% (43.0)\n"
+      "(62.0)\n",
+      "(58.0)\n",
+      "(49.0)\n",
+      "(45.0)\n",
+      "(43.0)\n"
      ]
     },
     {
@@ -1072,7 +1072,7 @@
     "top_5 = grouped.sort_values(by='total', ascending=False).head(5)\n",
     "\n",
     "for index, row in top_5.iterrows():\n",
-    "    print(f\"{index}: {row['porcentagem']:.2f}% ({row['total']})\")\n",
+    "    print(f\"({row['total']})\")\n",
     "    \n",
     "plt.barh(top_5.index, top_5['total'])\n",
     "plt.xlabel('Quantiadade')\n",
